# pylines

./: README.md  architecture-guide.md  code-style.md  pyproject.example.toml  pyproject.toml  recommended-solutions.md  rest.md  solid.md  tests.md
.github/workflows/: test.yml
claude-skill/: SKILL.md
code-style-tests/: Justfile  automatable-code-style-rules.md  pyproject.toml  rules-non-automatable.md  rules.md
code-style-tests/src/code_style_tests/: avoid_magic_correct.py  avoid_magic_incorrect.py  class_design_composition_correct.py  class_design_composition_incorrect.py  class_design_dataclass_correct.py  class_design_dataclass_incorrect.py  control_flow_correct.py  control_flow_incorrect.py  exception_specific_correct.py  exception_specific_incorrect.py  immutability_class_correct.py  immutability_class_incorrect.py  immutability_final_correct.py  immutability_final_incorrect.py  immutability_mapping_correct.py  immutability_mapping_incorrect.py  line_length_correct.py  line_length_incorrect.py  module_import_correct.py  module_import_incorrect.py  my_module.py  narrow_types_correct.py  narrow_types_incorrect.py  no_scalar_annotation_correct.py  no_scalar_annotation_incorrect.py  pep257_correct.py  pep257_incorrect.py  pep484_incorrect.py  pep526_correct.py  pep8_import_correct.py  pep8_import_incorrect.py  regex_correct.py  regex_incorrect.py  resilience_correct.py  resilience_incorrect.py  safe_index_correct.py  safe_index_incorrect.py  self_documenting_comment_correct.py  self_documenting_comment_incorrect.py  self_documenting_get_prefix_correct.py  (+10 more)
code-style-tests/tests/: test_main.py
community-of-python-flake8-plugin/: Justfile  README.md  pyproject.toml
community-of-python-flake8-plugin/src/community_of_python_flake8_plugin/: __init__.py  constants.py  helpers.py  plugin.py  utils.py  violation_codes.py  violations.py
community-of-python-flake8-plugin/src/community_of_python_flake8_plugin/checks/: README.md  __init__.py  annotation_check.py  annotations.py  class_check.py  cop001.py  cop002.py  cop003.py  cop004.py  cop005.py  cop006.py  cop007.py  cop008.py  cop009.py  cop010.py  cop011.py  cop012.py  immutability.py  import_check.py  imports.py  module_check.py  naming.py  naming_check.py  safe_index.py  temporary_var_check.py  temporary_vars.py
community-of-python-flake8-plugin/tests/: test_plugin.py  test_violation_codes.py
pylines-skill/references/: code-style.md  rest.md  solid.md  stack.md  tests.md
