[project]
name = "code-style-tests"
version = "0.1.0"
dependencies = [
    "auto-typing-final>=1.0.3",
    "community-of-python-flake8-plugin @ file:///Users/lev/code/community-of-python/pylines/community-of-python-flake8-plugin",
    "flake8>=7.2.0",
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.14",
    "stamina>=25.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["EM", "FBT", "TRY003", "D1", "D203", "D213", "G004", "FA", "COM812", "ISC001"]

[tool.ruff.lint.isort]
no-lines-before = ["standard-library", "local-folder"]
known-third-party = []
known-local-folder = []

[tool.ruff.lint.extend-per-file-ignores]
"tests/*.py" = ["S101", "S311"]

[tool.coverage.report]
exclude_also = ["if typing.TYPE_CHECKING:"]

[tool.mypy]
strict = true
mypy_path = ["src"]
explicit_package_bases = true

[tool.flake8]
select = ["COP"]
exclude = [".venv"]
