[project]
name = "code-style-tests"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "auto-typing-final",
    "community-of-python-flake8-plugin",
    "flake8",
    "httpx",
    "mypy",
    "pytest",
    "pytest-xdist",
    "ruff",
    "stamina",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
