[project]
name = "community-of-python-flake8-plugin"
version = "0.1.27"
description = "Community of Python flake8 plugin"
readme = "README.md"
authors = [
    { name = "Lev Vereshchagin", email = "mail@vrslev.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.entry-points."flake8.extension"]
COP = "community_of_python_flake8_plugin.plugin:CommunityOfPythonFlake8Plugin"

[tool.pytest.ini_options]
addopts = "-v"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.14",
]
test = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
